# goat-sdk-py-aiflow

./: .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  error_to_fix.md  project_status_llm2.md  prompt.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.direnv/python-3.11/: pyvenv.cfg
.github/workflows/: ci.yml
Docs/: llm_comunication.md  plugin-guide.md  project_status.md  project_status_llm2.md  test_goat_py.md
Docs/core/: getting_started.md
Docs/plugins/: jupiter.md  nft.md  tensor.md
docs/: index.md
docs/guides/: ai-integration.md  getting-started.md  plugin-guide.md
examples/: README.md
examples/adapters/: langchain_example.py  phidata_example.py
examples/hyperliquid/: README.md  ai_trading_agent.py  basic_operations.py  hyperliquid_api.md  test_hyperliquid.py  test_hyperliquid_examples.py
examples/jupiter/: get_usdc.py  test_get_usdc.py  test_jupiter_examples.py  token_swap.py
examples/mode/token_creation/: .env.example  README.md  deploy_custom_token.py  deploy_token.py  requirements.txt
examples/nft/: test_nft_examples.py
examples/spl_token/: basic_operations.py  test_spl_token_examples.py
extra/: curl_response.md  diff_check_project.md  fix_plan.md  fixing_bugs-copy.md  fixing_bugs.md  project_status_llm2.md  prompt.txt  run_all_tests.py  run_core_tests.py  run_tests.py  test_enhanced_validation.py  test_output.txt  test_plugs.md  uniswap_fix.md
extra/jupiter/: test_client.py  test_jupiter_service.py  test_plugin.py  test_service.py
extra/logs/: debug_session.json  test_output.txt
extra/old_docs/: api-reference.md  getting-started.md
extra/old_docs/plugins/: erc20.md  hyperliquid.md  spl_token.md  uniswap.md
extra/spl/utils/: test_get_token_by_mint_address.py
goat_sdk/: .pre-commit-config.yaml  CHANGELOG.md  __init__.py  plugin.py  pyproject.toml  requirements.txt  setup.py  types.py
goat_sdk/.github/workflows/: ci.yml
goat_sdk/adapters/: README.md
goat_sdk/adapters/langchain/: README.md  __init__.py  adapter.py  tool.py
goat_sdk/adapters/phidata/: README.md  __init__.py  adapter.py  toolkit.py
goat_sdk/core/: __init__.py  chain.py  client_base.py  config.py  decorators.py  errors.py  exceptions.py  plugin_base.py  wallet_client.py
goat_sdk/core/classes/: __init__.py  client_base.py  plugin_base.py  sdk.py  tool_base.py  wallet_client_base.py
goat_sdk/core/decorators/: __init__.py  tool.py
goat_sdk/core/telemetry/: __init__.py  middleware.py
goat_sdk/core/types/: __init__.py  chain.py  response.py
goat_sdk/core/utils/: add_parameters_to_description.py  create_tool_parameters.py  events.py  get_tools.py  rate_limit.py  retry.py  snake_case.py
goat_sdk/docs/: api-reference.md  getting-started.md  plugin-guide.md
goat_sdk/plugins/ERC20/: __init__.py  compile_contract.py  erc20_plugin.py  mode_config.py  parameters.py  test_token.sol  tokens.py  types.py
goat_sdk/plugins/hyperliquid/: __init__.py  config.py  errors.py  models.py  plugin.py  service.py  utils.py
goat_sdk/plugins/hyperliquid/tests/: README.md  conftest.py  pytest.ini  test_account.py  test_connection.py  test_market_data.py  test_market_data_individual.py  test_order_management.py
goat_sdk/plugins/hyperliquid/types/: __init__.py  account.py  agent.py  enums.py  market.py  order.py
goat_sdk/plugins/jupiter/: __init__.py  client.py  config.py  errors.py  models.py  plugin.py  service.py
goat_sdk/plugins/jupiter/tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_plugin.py
goat_sdk/plugins/jupiter/types/: __init__.py  quote.py  swap.py
goat_sdk/plugins/nft/: __init__.py  plugin.py  service.py  tools.py  types.py
goat_sdk/plugins/nft/tests/: test_compressed_nft.py
goat_sdk/plugins/spl_token/: __init__.py  constants.py  exceptions.py  models.py  monitoring.py  parameters.py  spl_token_plugin.py  spl_token_service.py  tokens.py
goat_sdk/plugins/spl_token/tests/: __init__.py  test_spl_token_service.py  test_utils.py
goat_sdk/plugins/spl_token/utils/: __init__.py  constants.py  does_account_exist.py  get_token_by_mint_address.py  get_token_info_by_symbol.py  get_tokens_for_network.py  token_account.py
goat_sdk/plugins/tensor/: __init__.py  client.py  config.py  errors.py  plugin.py
goat_sdk/plugins/tensor/tests/: __init__.py  conftest.py  test_tensor_client.py
goat_sdk/plugins/tensor/types/: __init__.py
goat_sdk/plugins/tensor/utils/: transaction.py
goat_sdk/plugins/uniswap/: __init__.py  advanced_security.py  enhanced_validation.py  parameters.py  security.py  uniswap_plugin.py  uniswap_service.py  validation.py
goat_sdk/plugins/uniswap/types/: __init__.py
scripts/: run_tests.sh  setup_venv.sh
tests/: base_test.py  conftest.py  test_helpers.py
tests-copy/: conftest.py  test_helpers.py
tests-copy/adapters/: test_langchain_adapter.py
tests-copy/core/classes/: __init__.py  test_wallet_client_base.py
tests-copy/core/decorators/: __init__.py
tests-copy/core/utils/: test_get_tools.py
tests-copy/plugins/ERC20/: conftest.py  test_erc20_plugin.py  test_token.sol
tests-copy/plugins/hyperliquid/: __init__.py  test_market_data.py
tests-copy/plugins/nft/: nft_test_base.py  test_nft_plugin.py
tests-copy/plugins/spl_token/: test_spl_token_plugin.py  test_spl_token_service_integration.py
tests-copy/plugins/tensor/: tensor_test_base.py
tests-copy/plugins/uniswap/: test_contract_interaction.py
tests/adapters/: test_langchain_adapter.py  test_phidata_adapter.py
tests/core/classes/: test_plugin_base.py  test_tool_base.py  test_wallet_client_base.py
tests/core/decorators/: test_tool.py
tests/core/types/: __init__.py  test_chain.py
tests/core/utils/: test_add_parameters_to_description.py  test_create_tool_parameters.py  test_get_tools.py  test_snake_case.py
tests/plugins/ERC20/: conftest.py  package-lock.json  package.json  test_erc20_plugin.py  test_mode_integration.py  test_token.abi
tests/plugins/hyperliquid/: conftest.py  data.md  test_agent.py  test_market_data.py
(+29 files in other folders)
